--- a/CharMovie/CharMovie.vcxproj
+++ b/CharMovie/CharMovie.vcxproj
@@ -85,6 +85,7 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>C:\opencv\opencv-vs-4.5.4\build\include;C:\Users\kyoss\mylib\c\win-c\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\opencv\opencv-vs-4.5.4\build\x64\vc15\lib;C:\Users\kyoss\mylib\c\win-c\build\Release;$(LibraryPath)</LibraryPath>
+    <TargetName>cmovie</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
